# tabula

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
make/: install.sh  setup.sh  sync.sh  test.sh
run/: construir_datasets.py  gerar_site.py
src/: __init__.py  datasets_config.py  grafico_utils.py  logging_config.py
src/construtores/: __init__.py  alunos_por_situacao.py  alunos_por_situacao_presencial.py  campus_natureza.py  cota_mec.py  cota_sistec.py  cotas.py  dist_percentual_progresso.py  etnia_natureza.py  etnia_raca.py  etnia_situacao.py  etnia_turno.py  forma_ingresso.py  forma_ingresso_situacao.py  modalidade.py  modalidade_presencial.py  modalidade_situacao.py  natureza_coorte.py  natureza_escola.py  natureza_participacao.py  natureza_situacao.py  natureza_turno.py  necessidades_especiais.py  situacao_escola.py  tempo_instituicao.py  tipo_escola_origem.py  transporte_situacao.py  transporte_tipo.py  turno.py  turno_escola.py
src/templates/: base.html  chart.html  criterios_orcamentarios.html  index.html
src/web_static/assets/: chart-page.css  styles.css
src/web_static/js/: filtros.js  kpi.js
src/web_static/js/charts/: campus_natureza.js  cotas.js  criterios_orcamentarios.js  etnia.js  etnia_natureza.js  etnia_situacao.js  etnia_turno.js  forma_ingresso.js  forma_ingresso_situacao.js  modalidade.js  modalidade_situacao.js  natureza.js  natureza_coorte.js  natureza_escola.js  natureza_situacao.js  natureza_turno.js  necessidades.js  progresso.js  situacao.js  situacao_escola.js  tempo_instituicao.js  tipo_escola.js  transporte.js  transporte_situacao.js  turno.js  turno_escola.js
src/web_static/js/utils/: csv.js  helpers.js
tests/: __init__.py  test_construir_datasets.py  test_grafico_utils.py
